--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
     "dotenv": "^16.3.1",
     "json-server": "^0.17.4",
     "morgan": "^1.10.0",
@@ -18,6 +19,7 @@
     "openai": "^4.20.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.20.1",
     "react-textarea-autosize": "^8.5.3"
   },
